<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassUsersActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_pass"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changePass"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/users_pass_save"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:text="@string/users_save"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:layout_marginEnd="5dp"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/linear_past_pass"
        android:layout_below="@+id/toolbar_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_past"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/users_pass_past"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="18sp"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/linear_past_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_now"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/users_pass_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>