<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BindUsersActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bind"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bind_users"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/users_bind_save"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:text="@string/users_save"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:layout_marginEnd="5dp"/>
    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/users_bind_bindED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_bind"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:lines="1"
        android:ellipsize="end"/>
    <RelativeLayout
        android:id="@+id/bind"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/users_bind_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:textSize="24sp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/users_bind_black"
            android:layout_centerHorizontal="true"
            android:text="@string/changeBind"
            android:textSize="12sp"/>
    </RelativeLayout>
</RelativeLayout>